# litcode

./: AGENTS.md  LICENSE  PRD.ko.md  PRD.md  PROGRESS.ko.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
docs/en/: PRD.md  PROGRESS.md
docs/ko/: PRD.md  PROGRESS.md  README.md
src/: App.tsx  App2.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  fs.rs  git.rs  mod.rs  search.rs  terminal.rs
src/components/: Button.tsx  Checkbox.tsx  ContextMenu.tsx  EmptyState.tsx  Icon.tsx  IconButton.tsx  Input.tsx  Panel.tsx  Radio.tsx  Section.tsx  Select.tsx  Slider.tsx  Toggle.tsx  components.css  index.ts
src/core/: LICENSE  event-bus.ts  index.ts  ipc.ts  plugin-api.ts  plugin-loader.ts  settings-store.tsx  types.ts
src/lib/: editor-utils.ts
src/plugins/debugger/: index.ts
src/plugins/debugger/components/: DebuggerPanel.css  DebuggerPanel.tsx
src/plugins/editor/: index.ts
src/plugins/editor/components/: Editor.css  Editor.tsx
src/plugins/file-explorer/: index.ts
src/plugins/file-explorer/components/: FileExplorerPanel.css  FileExplorerPanel.tsx  FileTree.css  FileTree.tsx  InlineInput.tsx  file-icons.tsx
src/plugins/git-diff/: index.ts
src/plugins/search/: index.ts
src/plugins/settings/: index.ts
src/plugins/terminal/: index.ts
src/styles/: global.css
src/styles/themes/: dark.json  light.json
src/ui/: Layout.css  Layout.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  index.ts
(+12 files in other folders)
