[package]
name = "litcode"
version = "0.1.0"
description = "Minimal IDE for vibe coding"
authors = ["parksangcheon"]
edition = "2021"

[lib]
name = "litcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.19"

